<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.DetailsActivity">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_download"
        android:title="@string/download"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_to_fav"
        android:icon="@drawable/ic_star_border"
        android:title="@string/add_to_favorites"
        app:showAsAction="always" />

</menu>