<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_aston"
            android:icon="@drawable/aston_martin"
            android:title="@string/aston" />

        <item
            android:id="@+id/nav_bentley"
            android:icon="@drawable/bentley"
            android:title="@string/bentley" />

        <item
            android:id="@+id/nav_bugatti"
            android:icon="@drawable/bugatti"
            android:title="@string/bugatti_walp" />

        <item
            android:id="@+id/nav_ferrari"
            android:icon="@drawable/ferrari"
            android:title="@string/ferrari_walp" />

        <item
            android:id="@+id/nav_lambo"
            android:icon="@drawable/lambo"
            android:title="@string/lambo_walp" />

        <item
            android:id="@+id/nav_mclaren"
            android:icon="@drawable/mclaren"
            android:title="@string/mclaren" />

        <item
            android:id="@+id/nav_porsche"
            android:icon="@drawable/porsche"
            android:title="@string/porsche_walp" />

        <item
            android:id="@+id/nav_rolls"
            android:icon="@drawable/rollsroyce"
            android:title="@string/rolls" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star_red_24dp"
            android:title="@string/favorites" />

        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate_us" />

    </group>

</menu>